# pytorch

./: .gitignore  build.sh
aten/: CMakeLists.txt
aten/doc/: generate_files.org
aten/src/ATen/: ATenGeneral.h  CMakeLists.txt  Config.h.in  Context.cpp  Context.h  Half.h  ScalarType.h  StorageBase.h  StorageOps.h  StorageOpsGeneric.h  StorageTemplate.h  TypeTemplate.h  allocatorOps.h  gen.py  type_template.h
aten/src/ATen/ATGenerate/: GenerateAllBackendTypes.h  GenerateAllTypes.h  GenerateByteType.h  GenerateCharType.h  GenerateDoubleType.h  GenerateFloatType.h  GenerateHalfType.h  GenerateIntType.h  GenerateLongType.h  GenerateShortType.h
aten/src/ATen/glue/: StorageOpsGeneric.h  allocator.h
aten/src/ATen/templates/: Type.cpp  Type.h
aten/src/THC/generic/: THCStorage.h
aten/src/THCL/: CMakeLists.txt  THCL.h  THCLGeneral.cc  THCLGeneral.h  THCl.h  THClAllocator.cc  THClAllocator.h  THClGeneral.cc  THClGeneral.h  THClGenerateAllTypes.h  THClGenerateByteType.h  THClGenerateCharType.h  THClGenerateDoubleType.h  THClGenerateFloatType.h  THClGenerateFloatTypes.h  THClGenerateHalfType.h  THClGenerateIntType.h  THClGenerateLongType.h  THClGenerateShortType.h  THClHalf.h  THClStorage.cc  THClStorage.h
aten/src/THCL/generic/: THClGenerateAllTypes.h  THClStorage.cc  THClStorage.h
guix/: boost-compute.scm  manifest.scm  pytorch.scm
guix/aten/: manifest.scm
guix/aten/package/: aten.scm
guix/pytorch/package/: pytorch.scm
torch/cl/: __init__.py
torch/csrc/: Module.cpp
torch/csrc/autograd/: python_variable.cpp
torch/csrc/cl/: Module.cpp
torch/csrc/tensor/: python_tensor.cpp
torch/csrc/utils/: tensor_dtypes.cpp  tensor_types.cpp  tensor_types.h
torch/jit/: __init__.py
torch/lib/include/ATen/: CPUDoubleType.h  CPUIntType.h  Config.h  Context.h  ScalarType.h  SparseCPUByteType.h  SparseCPUDoubleType.h  SparseCPUFloatType.h  SparseCPUIntType.h  SparseCPULongType.h  Tensor.h  Type.h
torch/lib/include/TH/: THGeneral.h
