set(ATen_CL_INCLUDE {ATen_CL_INCLUDE}
  "${CMAKE_CURRENT_BINARY_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}"
  PARENT_SCOPE)

set(ATen_CL_SRCS ${ATen_CL_SRCS}
  ${CMAKE_CURRENT_SOURCE_DIR}/THClGeneral.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/THClStorage.cc
PARENT_SCOPE)

INSTALL(FILES
  THCl.h
  THClGeneral.h
  DESTINATION "${ATEN_INSTALL_INCLUDE_SUBDIR}/THCL")
