cmake_minimum_required(VERSION 3.0)
set(CL_INCLUDE {ATen_CL_INCLUDE}
  "${CMAKE_CURRENT_BINARY_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}")
if(NOT CLTORCH_LIB)
  set(ATen_CL_INCLUDE ${CL_INCLUDE} PARENT_SCOPE)
endif()

set(CL_SRCS ${ATen_CL_SRCS}
  ${CMAKE_CURRENT_SOURCE_DIR}/THClAllocator.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/THClGeneral.cc
  ${CMAKE_CURRENT_SOURCE_DIR}/THClStorage.cc)
if(NOT CLTORCH_LIB)
  set(ATen_CL_SRCS ${CL_SRCS} PARENT_SCOPE)
endif()


INSTALL(FILES
  THCl.h
  THClGeneral.h
  DESTINATION "${ATEN_INSTALL_INCLUDE_SUBDIR}/THCL")

if(CLTORCH_LIB)
  add_library(cltorch ${CL_SRCS})
endif()
